[package]
name = "nuntius-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
iroh = "0.33"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "File",
  "FileList",
  "FileReader",
  "HtmlInputElement",
  "Event",
  "EventTarget",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
]