[package]
name = "nuntius-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "nuntius_ffi"
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
uniffi = { version = "0.29", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
iroh = "0.97"
iroh-blobs = { version = "0.99", features = ["fs-store"] }
anyhow = "1"
rand = "0.9"
n0-future = "0.3"
thiserror = "2"
tempfile = "3"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }
